Внесены правки по итогам ревью