@@ -10,7 +10,7 @@ public class CountBadSleepSessions implements Function<SleepingLog, SleepAnalysi
         return new SleepAnalysisResult("Количество сессий с плохим качеством сна: ",
                 String.valueOf(sleepingLog.getLog().stream()
                         .filter(sleepingSession -> sleepingSession.getQuality() == SleepQuality.BAD)
-                        .collect(Collectors.toList())
+                        .toList()
                         .size()
                 ));
     }
